[package]
name = "chain_metadata_graphql_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = { version = "7.0.2", features = ["actix-web", "subscription", "tokio-runtime", "dataloader", "tracing"] }
async-graphql-actix-web = "7.0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Configuration
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
config = { version = "0.14", features = ["yaml", "json", "toml", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
once_cell = "1.19" # For lazy static initialization (e.g. mock data store)
rand = "0.8"       # For generating mock data
uuid = { version = "1.8.0", features = ["v4", "serde"] } # For generating unique IDs
async-stream = "0.3" # For creating streams in subscriptions

# juniper = "0.15" # Keeping async-graphql as per previous steps 